# growth-rs

./: .gitignore  CLAUDE.md  Dockerfile  README.md  justfile
.cargo/: config.toml
deploy/: crds.yaml  rbac.yaml
deploy/chart/: Chart.yaml  GrowthRS.md  values.yaml
deploy/chart/crds/: crds.yaml
deploy/chart/examples/: cloud-init.sh  nodeclass.yaml  nodepool.yaml
deploy/chart/templates/: deployment.yaml  rbac.yaml
deploy/hetzner/: cloud-init.sh  node-class.yaml  nodepool.yaml
deploy/toxiproxy/: Dockerfile
growthrs/: Cargo.toml  README.md
growthrs/src/: clock.rs  config.rs  controller.rs  lib.rs  main.rs  node_pool.rs  node_request.rs  offering.rs  optimiser.rs  testing.rs
growthrs/src/controller/: config.rs  errors.rs  healthcheck.rs  helpers.rs  mod.rs
growthrs/src/controller/node/: mod.rs
growthrs/src/controller/node_removal/: decision.rs  helpers.rs  mod.rs
growthrs/src/controller/node_requests/: helpers.rs  mod.rs
growthrs/src/crds/: hetzner_node_class.rs  mod.rs  node_pool.rs  node_removal_request.rs  node_request.rs  user_data.rs
growthrs/src/offering/: consts.rs  helper.rs  mod.rs  node.rs
growthrs/src/optimiser/: affinity.rs  mod.rs
growthrs/src/providers/: fake.rs  hetzner.rs  kwok.rs  mod.rs  provider.rs
growthrs/src/providers/fake/: mod.rs  types.rs
growthrs/src/providers/hetzner/: config.rs  mod.rs
growthrs/src/resources/: hetzner_node_class.rs  mod.rs  node_pool.rs  node_removal_request.rs  node_request.rs  user_data.rs
growthrs/tests/: affinity.rs  cancel_nrr_convergence.rs  consistency.rs  nrr_state_machine.rs  provider_failures.rs  scale.rs  startup_taint.rs  watcher_restart.rs
growthrs/tests/common/: mod.rs
rfc/: GrowthRS.md
