[package]
name = "growthrs"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
thiserror = "2.0.18"
anyhow = "1.0.101"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4"] }
