[package]
name = "growthrs"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
anyhow = "1.0.101"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.21.0", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
fail = {version="0.5", features=["failpoints"]}
hcloud = {version="0.25.0", default-features=false, features=["rustls-tls"]}
envconfig = "0.11.1"
axum = "0.8.8"

[[bin]]
name = "test_pod"
required-features = ["testing"]

[[bin]]
name = "nuke"
required-features = ["testing"]

[features]
testing = []
failpoints = ["fail/failpoints", "testing"]
toxi = ["failpoints"]

[dev-dependencies]
tower-test = "0.4"
http = "1"
serde_json = "1"
hyper = "1"
